k8s/prod/services/www/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: srvcs-www
  namespace: srvcs-prod
  labels:
    app.kubernetes.io/name: srvcs-www
    app.kubernetes.io/part-of: srvcs
    srvcs.cloud/service: www
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: srvcs-www
  ports:
    - name: http
      port: 80
      targetPort: http
